# MovieBuddy

./: .gcloudignore  .gitignore  .nvmrc  app.yaml  conftest.py  main.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  settings.py
backend/: app.yaml  conftest.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/routes/: auth.py  general.py
backend/templates/: index.html  login.html
backend/utils/: api.py  constants.py  fixtures.py
backend/utils/services/: flask_helpers.py  serialisers.py
frontend/: .eslintrc.json  .prettierrc.js  .sasslintrc.fix.yaml  .stylelintrc.js  README.md  angular.json  package-lock.json  package.json  tsconfig.app.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.module.ts  app.routes.ts  app.routing.module.ts
frontend/src/app/google-sign-in-button/: google-sign-in-button.component.html  google-sign-in-button.component.ts
frontend/src/user/: user.actions.ts  user.reducers.ts
frontend/src/utils/: local_storage.ts  routes.ts
scripts/: check_imports.sh  check_style.sh  check_types.sh  run_serve.sh  run_tests.sh
src/: main.py  settings.py
src/routes/: auth.py  auth_routes_test.py  general.py  lists.py  watchlists.py  watchlists_test.py
src/templates/: login.html
src/utils/: api.py  auth.py  conftest.py  constants.py  db_models.py  exceptions.py  fixtures.py
src/utils/services/: auth.py  auth_test.py  secrets.py  serialisers.py
(+3 files in other folders)
